--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "premix-gists-demo",
+  "name": "mdr-sample-gists",
   "version": "0.1.0",
   "private": true,
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.7.0",
+    "@testing-library/react": "^10.0.4",
+    "@testing-library/user-event": "^10.1.0"
+  },
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
+    "marauder": "0.1.0-beta.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-router": "next",
+    "react-router-dom": "next",
+    "react-scripts": "^3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
